--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "migrate": "node model/database.js"
+    "migrate": "npx sequelize-cli db:migrate"
   },
   "dependencies": {
     "axios": "^1.6.7",
