--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "dependencies": {
     "axios": "^1.6.7",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
+    "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
+    "nodemon": "^3.1.0",
     "sequelize": "^6.37.1"
   },
   "devDependencies": {
