--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "nodemon ./bin/www",
     "migrate": "npx sequelize-cli db:migrate"
+  
   },
   "dependencies": {
     "axios": "^1.6.7",
@@ -20,6 +21,9 @@
     "sequelize": "^6.37.1"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.6.2"
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "sequelize-cli": "^6.6.2",
+    "tailwindcss": "^3.4.1"
   }
 }
