--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "start": "nodemon ./bin/www",
     "migrate": "npx sequelize-cli db:migrate"
-  
   },
   "dependencies": {
     "axios": "^1.6.7",
@@ -20,6 +19,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
+    "react-datepicker": "^6.3.0",
     "sequelize": "^6.37.1"
   },
   "devDependencies": {
