--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "migrate": "npx sequelize-cli db:migrate"
   },
   "dependencies": {
+    "@dicebear/avatars": "^4.10.8",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
